--- a/20250919.ipynb
+++ b/20250919.ipynb
@@ -1968,6 +1968,198 @@
     "        continue\n",
     "    print(i, end=\" \")              \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "93530960",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 중첩반복문\n",
+    "# 2단부터 9단까지 출력해주세요\n",
+    "# 2 * 1 = 2\n",
+    "# 2 * 2 = 4\n",
+    "# 2 * 3 = 6\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "b5e11909",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 * 1 = 2\n",
+      "2 * 2 = 4\n",
+      "2 * 3 = 6\n",
+      "2 * 4 = 8\n",
+      "2 * 5 = 10\n",
+      "2 * 6 = 12\n",
+      "2 * 7 = 14\n",
+      "2 * 8 = 16\n",
+      "2 * 9 = 18\n",
+      "3 * 1 = 3\n",
+      "3 * 2 = 6\n",
+      "3 * 3 = 9\n",
+      "3 * 4 = 12\n",
+      "3 * 5 = 15\n",
+      "3 * 6 = 18\n",
+      "3 * 7 = 21\n",
+      "3 * 8 = 24\n",
+      "3 * 9 = 27\n",
+      "4 * 1 = 4\n",
+      "4 * 2 = 8\n",
+      "4 * 3 = 12\n",
+      "4 * 4 = 16\n",
+      "4 * 5 = 20\n",
+      "4 * 6 = 24\n",
+      "4 * 7 = 28\n",
+      "4 * 8 = 32\n",
+      "4 * 9 = 36\n",
+      "5 * 1 = 5\n",
+      "5 * 2 = 10\n",
+      "5 * 3 = 15\n",
+      "5 * 4 = 20\n",
+      "5 * 5 = 25\n",
+      "5 * 6 = 30\n",
+      "5 * 7 = 35\n",
+      "5 * 8 = 40\n",
+      "5 * 9 = 45\n",
+      "6 * 1 = 6\n",
+      "6 * 2 = 12\n",
+      "6 * 3 = 18\n",
+      "6 * 4 = 24\n",
+      "6 * 5 = 30\n",
+      "6 * 6 = 36\n",
+      "6 * 7 = 42\n",
+      "6 * 8 = 48\n",
+      "6 * 9 = 54\n",
+      "7 * 1 = 7\n",
+      "7 * 2 = 14\n",
+      "7 * 3 = 21\n",
+      "7 * 4 = 28\n",
+      "7 * 5 = 35\n",
+      "7 * 6 = 42\n",
+      "7 * 7 = 49\n",
+      "7 * 8 = 56\n",
+      "7 * 9 = 63\n",
+      "8 * 1 = 8\n",
+      "8 * 2 = 16\n",
+      "8 * 3 = 24\n",
+      "8 * 4 = 32\n",
+      "8 * 5 = 40\n",
+      "8 * 6 = 48\n",
+      "8 * 7 = 56\n",
+      "8 * 8 = 64\n",
+      "8 * 9 = 72\n",
+      "9 * 1 = 9\n",
+      "9 * 2 = 18\n",
+      "9 * 3 = 27\n",
+      "9 * 4 = 36\n",
+      "9 * 5 = 45\n",
+      "9 * 6 = 54\n",
+      "9 * 7 = 63\n",
+      "9 * 8 = 72\n",
+      "9 * 9 = 81\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dan = 2 ~ 9\n",
+    "\n",
+    "for dan in range(2, 10):\n",
+    "    for i in range(1, 10):\n",
+    "        print(f\"{dan} * {i} = {dan*i}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6638394",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2 4 6 8 .... 18\n",
+    "3 6 9 ... 27\n",
+    "...\n",
+    "9 18 27 ... 81"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "d9867801",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\t4\t6\t8\t10\t12\t14\t16\t18\t\n",
+      "3\t6\t9\t12\t15\t18\t21\t24\t27\t\n",
+      "4\t8\t12\t16\t20\t24\t28\t32\t36\t\n",
+      "5\t10\t15\t20\t25\t30\t35\t40\t45\t\n",
+      "6\t12\t18\t24\t30\t36\t42\t48\t54\t\n",
+      "7\t14\t21\t28\t35\t42\t49\t56\t63\t\n",
+      "8\t16\t24\t32\t40\t48\t56\t64\t72\t\n",
+      "9\t18\t27\t36\t45\t54\t63\t72\t81\t\n"
+     ]
+    }
+   ],
+   "source": [
+    "# dan = 2 ~ 9 구구단 가로\n",
+    "\n",
+    "for dan in range(2, 10):\n",
+    "    for i in range(1, 10):\n",
+    "        print(f\"{dan*i}\", end=\"\\t\")\n",
+    "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20fd534a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 크리스마스 트리 출력\n",
+    "# 1. 문자열반복연산\n",
+    "# 2. 중첩반복문"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "db47454e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4 6 8 10 12 14 16 18 \n",
+      "3 6 9 12 15 18 21 24 27 \n",
+      "4 8 12 16 20 24 28 32 36 \n",
+      "5 10 15 20 25 30 35 40 45 \n",
+      "6 12 18 24 30 36 42 48 54 \n",
+      "7 14 21 28 35 42 49 56 63 \n",
+      "8 16 24 32 40 48 56 64 72 \n",
+      "9 18 27 36 45 54 63 72 81 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# 트리 만들기\n",
+    "\n",
+    "for a in range(2, 10):\n",
+    "    for i in range(1, 10):\n",
+    "        print(f\"{a*i}\", end=\" \")\n",
+    "    print()\n"
+   ]
   }
  ],
  "metadata": {
