--- a/20250919.ipynb
+++ b/20250919.ipynb
@@ -1971,21 +1971,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "93530960",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 중첩반복문\n",
-    "# 2단부터 9단까지 출력해주세요\n",
-    "# 2 * 1 = 2\n",
-    "# 2 * 2 = 4\n",
-    "# 2 * 3 = 6\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "b5e11909",
    "metadata": {},
    "outputs": [
@@ -2069,7 +2065,11 @@
     }
    ],
    "source": [
-    "# dan = 2 ~ 9\n",
+    "# 중첩반복문\n",
+    "# 2단부터 9단까지 출력해주세요\n",
+    "# 2 * 1 = 2\n",
+    "# 2 * 2 = 4\n",
+    "# 2 * 3 = 6\n",
     "\n",
     "for dan in range(2, 10):\n",
     "    for i in range(1, 10):\n",
@@ -2133,32 +2133,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "db47454e",
+   "execution_count": null,
+   "id": "02ae198b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 4 6 8 10 12 14 16 18 \n",
-      "3 6 9 12 15 18 21 24 27 \n",
-      "4 8 12 16 20 24 28 32 36 \n",
-      "5 10 15 20 25 30 35 40 45 \n",
-      "6 12 18 24 30 36 42 48 54 \n",
-      "7 14 21 28 35 42 49 56 63 \n",
-      "8 16 24 32 40 48 56 64 72 \n",
-      "9 18 27 36 45 54 63 72 81 \n"
+      "---------*\n",
+      "--------*\n",
+      "-------*\n",
+      "------*\n",
+      "-----*\n",
+      "----*\n",
+      "---*\n",
+      "--*\n",
+      "-*\n",
+      "*\n"
      ]
     }
    ],
    "source": [
-    "# 트리 만들기\n",
+    "#과제 트리 만들기\n",
+    "#반복문 활용\n",
     "\n",
-    "for a in range(2, 10):\n",
-    "    for i in range(1, 10):\n",
-    "        print(f\"{a*i}\", end=\" \")\n",
-    "    print()\n"
+    "n = 10\n",
+    "\n",
+    "for i in range(1, n + 1): #i가 별의 갯수에 영향을 줌.\n",
+    "    for j in range(n-i):\n",
+    "        print(\"-\", end=\"\")\n",
+    "    print(\"*\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d7282dbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            *\n",
+      "           ***\n",
+      "          *****\n",
+      "         *******\n",
+      "        *********\n",
+      "       ***********\n",
+      "      *************\n",
+      "     ***************\n",
+      "    *****************\n",
+      "   *******************\n",
+      "  *********************\n",
+      " ***********************\n",
+      "*************************\n"
+     ]
+    }
+   ],
+   "source": [
+    "#과제 트리 만들기 리마인드\n",
+    "#반복문 활용\n",
+    "\n",
+    "n = 13\n",
+    "\n",
+    "for i in range(1, n + 1): #i가 별의 갯수에 영향을 줌.\n",
+    "    for j in range(n-i):\n",
+    "        print(\" \", end=\"\")\n",
+    "    for j in range(2 * i - 1):\n",
+    "        print(\"*\", end=\"\")\n",
+    "    print(\"\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9aeb3dcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         **\n",
+      "        ***\n",
+      "       ****\n",
+      "      *****\n",
+      "     ******\n",
+      "    *******\n",
+      "   ********\n",
+      "  *********\n",
+      " **********\n",
+      "***********\n"
+     ]
+    }
+   ],
+   "source": [
+    "#과제 트리 만들기 리마인드\n",
+    "#반복문 활용\n",
+    "\n",
+    "n = 10\n",
+    "\n",
+    "for i in range(1, n + 1): #i가 별의 갯수에 영향을 줌.\n",
+    "    spaces = \" \" * (n-i)\n",
+    "    stars = \"*\" * (2 + i - 1)\n",
+    "    print(spaces + stars)\n"
    ]
   }
  ],
