--- a/20250922.ipynb
+++ b/20250922.ipynb
@@ -699,6 +699,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "id": "7a77c6d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits.remove(\"kiwi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 69,
    "id": "13222213",
    "metadata": {},
@@ -783,6 +793,483 @@
     "len(fruits)\n",
     "# ()안에 있는 항목의 개수"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "100751b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits.append(\"apple\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "07fa3a57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['grape', 'banana', 'kiwi', 'mango', 'apple']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "53c64d9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits.sort()\n",
+    "# 리스트 안의 항목들을 오름차순으로 정렬"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "681f17f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'apple', 'banana', 'grape', 'mango']"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26ad8965",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits.sort(reverse = True)\n",
+    "#내림차순"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "24c5b36c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['mango', 'grape', 'banana', 'apple', 'apple']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "ec58b61d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits.reverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "5cd01939",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['apple', 'apple', 'banana', 'grape', 'mango']"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "d0e5ea91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits = [\"apple\", \"banana\", \"mango\", \"cherry\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "7a22d9cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "apple\n",
+      "banana\n",
+      "mango\n",
+      "cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in fruits:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "0ecbd72a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0번째 과일apple\n",
+      "1번째 과일banana\n",
+      "2번째 과일mango\n",
+      "3번째 과일cherry\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(fruits)):\n",
+    "    print(f\"{i}번째 과일{fruits[i]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "aca957e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = [10,20,30,40,50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "6a3cb452",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb29bfba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "max(numbers)\n",
+    "# 내장함수 동작이 훨씬 빠름\n",
+    "# 큰 값을 찾아주는 기능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "005a9a70",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(numbers)\n",
+    "# 내장함수 동작이 훨씬 빠름\n",
+    "# 작은 값을 찾아주는 기능"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acd18ee3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30.0"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#평균값\n",
+    "#avg는 지원 안 함\n",
+    "sum(numbers)/len(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "b85d4744",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 반복문을 이용해서 리스트를 간단하게 생성 -> 리스트컴프리헨션\n",
+    "numbers = [i for i in range(10)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "3712838a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_list= []\n",
+    "for i in range(10):\n",
+    "    # print(i)\n",
+    "    num_list.append(i)\n",
+    "num_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec18a111",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [i*2 for i in range(1, 10+1)]\n",
+    "numbers\n",
+    "# (2의 복수)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cfc84658",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [i for i in range(1, 10+1) if i % 2 == 0]\n",
+    "numbers\n",
+    "# (2의 복수)\n",
+    "# 특정 조건 만족 리스트"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff9d2602",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_list= []\n",
+    "for i in range(10):\n",
+    "    # print(i)\n",
+    "    num_list.append(i)\n",
+    "num_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "0a68a485",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번 학생 합격\n",
+      "2번 학생 불합격\n",
+      "3번 학생 합격\n",
+      "4번 학생 불합격\n",
+      "5번 학생 합격\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks = [90, 25, 67, 45, 80]\n",
+    "num = 0\n",
+    "\n",
+    "for i in marks:\n",
+    "    num += 1\n",
+    "    if i >= 60:\n",
+    "        print(f\"{num}번 학생 합격\")\n",
+    "    else:\n",
+    "        print(f\"{num}번 학생 불합격\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca760e8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1번 학생 합격\n",
+      "2번 학생 불합격\n",
+      "3번 학생 합격\n",
+      "4번 학생 불합격\n",
+      "5번 학생 합격\n"
+     ]
+    }
+   ],
+   "source": [
+    "marks = [90, 25, 67, 45, 80]\n",
+    "\n",
+    "for i in range(len(marks)): # i는 5번 반복\n",
+    "\n",
+    "\n",
+    "    if marks[i] >= 60: # i번째 학생의 점수가 60점 이상이면\n",
+    "\n",
+    "        print(f\"{i+1}번 학생 합격\")\n",
+    "    else:\n",
+    "        print(f\"{i+1}번 학생 불합격\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "719ff16e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가나다\n",
+      "다람쥐\n",
+      "이름\n",
+      "패배하셨습니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#끝말 잇기 게임\n",
+    "var=\"가나다\"\n",
+    "\n",
+    "print(var)\n",
+    "while True:\n",
+    "    answer = input(\"끝말잇기 단어를 입력: \")\n",
+    "    print(answer)\n",
+    "    #비교하는 루틴\n",
+    "    if answer[0] == var[-1]:\n",
+    "        var = answer\n",
+    "    else:\n",
+    "        print(\"패배하셨습니다.\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4d210b3",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
