--- a/20250922.ipynb
+++ b/20250922.ipynb
@@ -1266,10 +1266,80 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d4d210b3",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6b1fd51",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# numbers = [1,1,3,3,0,1,1] -> [1,3,0,1]\n",
+    "# numbers = [4,4,4,3,3] -> [4,3]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddff3c1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 0, 1]"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [1,1,3,3,0,1,1]\n",
+    "\n",
+    "answer = []\n",
+    "comp = numbers[0]\n",
+    "answer.append(comp)\n",
+    "\n",
+    "for i in numbers:\n",
+    "    if comp != i: #이전 숫자와 같은지 비교\n",
+    "        comp = i # 다르면 비교할 숫자 갱신\n",
+    "        answer.append(comp) # 새로운 숫자이므로 리스트에 삽입\n",
+    "\n",
+    "answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "fa19d066",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 3]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [4,4,4,3,3]\n",
+    "\n",
+    "answer = []\n",
+    "comp = numbers[0]\n",
+    "answer.append(comp)\n",
+    "\n",
+    "for i in numbers:\n",
+    "    if comp != i: #이전 숫자와 같은지 비교\n",
+    "        comp = i # 다르면 비교할 숫자 갱신\n",
+    "        answer.append(comp) # 새로운 숫자이므로 리스트에 삽입\n",
+    "\n",
+    "answer"
+   ]
   }
  ],
  "metadata": {
