--- a/20250922.ipynb
+++ b/20250922.ipynb
@@ -344,7 +344,7 @@
     "# 컬렉션 자료형 : 여러 개의 요소를 하나로 묶어 사용하는 자료형\n",
     "\n",
     "# 리스트 (list)\n",
-    "# 딕셔너리 (dictionery)"
+    "# 딕셔너리 (dictionary)"
    ]
   },
   {
@@ -1339,6 +1339,805 @@
     "        answer.append(comp) # 새로운 숫자이므로 리스트에 삽입\n",
     "\n",
     "answer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a66d3ef9",
+   "metadata": {},
+   "source": [
+    "딕셔너리(dictionary)\n",
+    "순서가 없는 컬렉션 자료형으로 각각의 요소는 {키 : 값} 형태로 저장됨.\n",
+    "(키는 중복할 수 없지만, 값은 중복이 가능함.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "49c20cf8",
+   "metadata": {},
+   "source": [
+    "### 딕셔너리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "fdef7385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student = {'name': 'jimin', 'age': 29, 'hobby': 'game'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "129b4718",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(student)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "53d3344d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydict = {}\n",
+    "mydict = dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "34f49607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student = {'name': 'jimin', 'age': 29, 'hobby': 'game', 'name':'망개'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "5fc0bfb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student = {'name': 'jimin', 'age': 29, 'hobby': 'game', 'nickname':'망개'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "712e854a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'jimin', 'age': 29, 'hobby': 'game', 'nickname': '망개'}"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student\n",
+    "# 에러는 발생하지 않으나 키가 중복될 경우 마지막에 선언된 값으로 덮어씌어짐."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "ade9162d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student['age']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "id": "e0ff3072",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name', 'age', 'hobby', 'nickname'])"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "66325b96",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['jimin', 29, 'game', '망개'])"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "c83ce8f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('name', 'jimin'), ('age', 29), ('hobby', 'game'), ('nickname', '망개')])"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student.items()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "4d7ddabb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "age\n",
+      "hobby\n",
+      "nickname\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in student.keys():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "23806c3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jimin\n",
+      "29\n",
+      "game\n",
+      "망개\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in student.values():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "8fb00656",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('name', 'jimin')\n",
+      "('age', 29)\n",
+      "('hobby', 'game')\n",
+      "('nickname', '망개')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in student.items():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a82c2664",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student['nickname'] = '망개떡'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "20cf54f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student['addr'] = '서울시 용산구'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "id": "9c3a3db7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'jimin',\n",
+       " 'age': 29,\n",
+       " 'hobby': 'game',\n",
+       " 'nickname': '망개떡',\n",
+       " 'addr': '서울시 용산구'}"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "id": "f4f262f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "값이 없음\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(student.get('addr2', \"값이 없음\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "e5d35f4f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "29"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student.pop('age')\n",
+    "#리스트는 순서가 있는 데이터이나, 딕셔너리는 순서가 없는 데이터"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "9a20e921",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'jimin', 'hobby': 'game', 'nickname': '망개떡', 'addr': '서울시 용산구'}"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "student"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "9e3ab999",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'name' in student.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "05f09798",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name jimin\n",
+      "hobby game\n",
+      "nickname 망개떡\n",
+      "addr 서울시 용산구\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in student.items():\n",
+    "    print(i, j)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35df1c17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "모스부호  \n",
+    "\n",
+    " \n",
+    "\n",
+    "문자열 letter가 주어질 때, letter를 영어 소문자로 바꾼 문자열을 출력 하도록 코드작성 \n",
+    "\n",
+    " \n",
+    "\n",
+    "모스부호는 다음과 같습니다. \n",
+    "\n",
+    "morse = { \n",
+    "\n",
+    "    '.-':'a','-...':'b','-.-.':'c','-..':'d','.':'e','..-.':'f', \n",
+    "\n",
+    "    '--.':'g','....':'h','..':'i','.---':'j','-.-':'k','.-..':'l', \n",
+    "\n",
+    "    '--':'m','-.':'n','---':'o','.--.':'p','--.-':'q','.-.':'r', \n",
+    "\n",
+    "    '...':'s','-':'t','..-':'u','...-':'v','.--':'w','-..-':'x', \n",
+    "\n",
+    "    '-.--':'y','--..':'z' \n",
+    "\n",
+    "} \n",
+    "\n",
+    " \n",
+    "\n",
+    "입출력 예 \n",
+    "\n",
+    "letter  result \n",
+    "\n",
+    "\".... . .-.. .-.. ---\"  \"hello\" \n",
+    "\n",
+    "\".--. -.-- - .... --- -.\"   \"python\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "66b7552d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "#모스부호로 hello python\n",
+    "\n",
+    "morse = { \n",
+    "\n",
+    "    '.-':'a','-...':'b','-.-.':'c','-..':'d','.':'e','..-.':'f', \n",
+    "\n",
+    "    '--.':'g','....':'h','..':'i','.---':'j','-.-':'k','.-..':'l', \n",
+    "\n",
+    "    '--':'m','-.':'n','---':'o','.--.':'p','--.-':'q','.-.':'r', \n",
+    "\n",
+    "    '...':'s','-':'t','..-':'u','...-':'v','.--':'w','-..-':'x', \n",
+    "\n",
+    "    '-.--':'y','--..':'z' \n",
+    "\n",
+    "} \n",
+    "\n",
+    "letter = \".... . .-.. .-.. ---\"\n",
+    "\n",
+    "#코드구현 morse.keys() morse.values() morse.items()\n",
+    "\n",
+    "a = letter.split()\n",
+    "\n",
+    "answer =''\n",
+    "for i in a:\n",
+    "    answer += morse[i]\n",
+    "\n",
+    "print(answer)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8da82223",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#모스부호로 hello python\n",
+    "\n",
+    "morse = { \n",
+    "\n",
+    "    '.-':'a','-...':'b','-.-.':'c','-..':'d','.':'e','..-.':'f', \n",
+    "\n",
+    "    '--.':'g','....':'h','..':'i','.---':'j','-.-':'k','.-..':'l', \n",
+    "\n",
+    "    '--':'m','-.':'n','---':'o','.--.':'p','--.-':'q','.-.':'r', \n",
+    "\n",
+    "    '...':'s','-':'t','..-':'u','...-':'v','.--':'w','-..-':'x', \n",
+    "\n",
+    "    '-.--':'y','--..':'z' \n",
+    "\n",
+    "} \n",
+    "\n",
+    "letter = \".... . .-.. .-.. ---\"\n",
+    "\n",
+    "#코드구현 morse.keys() morse.values() morse.items()\n",
+    "\n",
+    "a = letter.split()\n",
+    "\n",
+    "answer =''\n",
+    "for i in a:\n",
+    "    answer += morse[i]\n",
+    "\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "09aa8c60",
+   "metadata": {},
+   "source": [
+    "### 튜플 자료형\n",
+    "세트(set) {} 중괄호 사용\n",
+    "하나의 변수 이름 선언 i={'01', '123', '567'}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf4e4975",
+   "metadata": {},
+   "source": [
+    "### set 자료형 \n",
+    "중복을 허용하지 않고, 순서가 없는 데이터 =  집합에 가까움.\n",
+    "s = {1, 2, 3, 4, 2, 3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "238557cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = {1, 2, 3, 4, 2, 3}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "f7344acf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "755cc429",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4}"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s\n",
+    "# 알아서 중복값을 제거해줌(강력)\n",
+    "# 집합 개념을 제공해줌\n",
+    "# 인덱싱으로 접근할 수 없음(교집합, 차집함에 주로 사용)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "8b2f392b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s.add(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a86753e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5}"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s\n",
+    "# s.pop()을 그대로 사용하면 임으로 삭제됨\n",
+    "# 그렇기 때문에 remove를 사용하여 특정 데이터 삭제를 함"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "0833916b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_list = [1,2,3,5,1,2,3,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "fa8638fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5]"
+      ]
+     },
+     "execution_count": 196,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(set(my_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "a9e2fb4d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {1,2,3,4}\n",
+    "b = {3,4,5,6}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69bd4b5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6}"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a | b # or연산자 (쉬프트 \\) 합집합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b645bf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6}"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.union(b) #합집합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "id": "1ecec2bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 4}"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a & b # and연산자 (쉬프트 7) 교집합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "id": "6046d3ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 4}"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.intersection(b) #교집합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "80eaccad",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a - b #차집합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "0af3f299",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.difference(b) #차집합     "
    ]
   }
  ],
